moved 'selected states' label, errors no longer wrap, visually cleaned up problem selection page

--- a/styles/select.css
+++ b/styles/select.css
@@ -191,3 +191,9 @@ li:last-child {
 .custom-field form {
   position: relative;
 }
+
+.custom-machine {
+  border-radius: 6px;
+  border-bottom: 1px solid rgb(229, 229, 229);
+  padding-bottom: 0.4em;
+}
